# Simple-Object-Viewer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
assets/: make_icon_set.sh  resource.rc
cmake/macros/: macro_esimulator_find_library.cmake  macro_to_string.cmake
cmake/modules/: FindGLFW.cmake
data/: sample.json  sample_bunny.json
include/: ImGui.hpp  OpenGL.hpp  core.hpp
include/App/: ImGui.hpp  ImGuiFileBrowser.hpp  ObjectAddPopup.hpp  PoneApp.hpp  PoneMain.hpp  ViewerApp.hpp  ViewerGUIApp.hpp  ViewerGUIMain.hpp  ViewerMain.hpp  common.hpp  main.hpp
include/Model/: AxesCone.hpp  AxisAlignedBoundingBox.hpp  Background.hpp  Box.hpp  DataStructure.hpp  GridPlane.hpp  MaterialObject.hpp  Model.hpp  Object.hpp  PointCloud.hpp  PointCloudPoly.hpp  PoneModel.hpp  Primitives.hpp  RenderingContext.hpp  ShaderCompiler.hpp  Sphere.hpp  Terrain.hpp  TextBox.hpp  ViewerModel.hpp  WireFrame.hpp
include/Renderer/: DepthRenderer.hpp  FrameBuffer.hpp  Renderer.hpp  ShadowMapping.hpp
include/Shader/: DefaultShaders.hpp  DepthShader.hpp  ModelShader.hpp  Shader.hpp  ShaderCompiler.hpp  depth.frag  depth.vert  model.frag  model.vert
include/Shaders/: DefaultShaders.hpp
include/SimView/: OpenGL.hpp  core.hpp
include/SimView/App/: PoneApp.hpp  ViewerApp.hpp  ViewerGUIApp.hpp
include/SimView/Model/: AxesCone.hpp  AxisAlignedBoundingBox.hpp  Background.hpp  Box.hpp  GridPlane.hpp  LightBall.hpp  LineSet.hpp  MaterialObject.hpp  Model.hpp  Object.hpp  PointCloud.hpp  PointCloudPoly.hpp  PoneModel.hpp  Primitives.hpp  RenderingContext.hpp  Sphere.hpp  Terrain.hpp  TextBox.hpp  ViewerModel.hpp  WireFrame.hpp
include/SimView/Renderer/: DepthRenderer.hpp  FrameBuffer.hpp  Renderer.hpp
include/SimView/Shader/: DefaultShaders.hpp  DepthShader.hpp  ModelShader.hpp  Shader.hpp  ShaderCompiler.hpp
include/SimView/Util/: Colors.hpp  DataStructure.hpp  FileUtil.hpp  FontStorage.hpp  Geometry.hpp  Logging.hpp  ModelParser.hpp  ObjectLoader.hpp  StbAdapter.hpp  StreamExecutor.hpp  StringUtil.hpp  Texture.hpp  llas.hpp
include/SimView/Window/: FPSManager.hpp  ImGuiMainView.hpp  ImGuiObjectAddPanel.hpp  ImGuiSceneView.hpp  Window.hpp
include/Util/: Colors.hpp  DataStructure.hpp  FileUtil.hpp  FontStorage.hpp  Geometry.hpp  Logging.hpp  Math.hpp  ModelParser.hpp  ObjectLoader.hpp  StbAdapter.hpp  StreamExecutor.hpp  Texture.hpp
include/Window/: FPSManager.hpp  ImGuiMainView.hpp  ImGuiObjectAddPanel.hpp  ImGuiSceneView.hpp  ImGuiWindow.hpp  ObjectAddPopup.hpp  Window.hpp
lib/: CMakeLists.txt
lib/ImGuiFileBrowser/FileBrowser/: CMakeLists.txt  ImGuiFileBrowser.cpp
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/glew-2.1.0/: glew.pc
lib/picojson/: picojson.hpp
lib/stb_image/: stb_image.h
lib/tiny_obj_loader/: tiny_obj_loader.h
python/: test.py
python/ViewerPythonBinding/: __init__.py
src/: CMakeLists.txt
src/App/: CMakeLists.txt  PoneApp.cpp  ViewerApp.cpp  ViewerGUIApp.cpp  main.cpp
src/App/Pone/: CMakeLists.txt  main.cpp
src/App/TestGUI/: CMakeLists.txt  ImGui.cpp  main.cpp
src/App/Viewer/: CMakeLists.txt  main.cpp
src/App/ViewerGUI/: CMakeLists.txt  CMakeLists.txt_old  ImGui.cpp  ImGuiFileBrowser.cpp  ObjectAddPopup.cpp  main.cpp  main.cpp_old
src/Binding/: Binding.cpp  CMakeLists.txt  Viewer.cpp  ViewerGUI.cpp  main.cpp
src/Main/: CMakeLists.txt
src/Main/Pone/: CMakeLists.txt  main.cpp
src/Main/Viewer/: CMakeLists.txt  main.cpp
src/Main/ViewerGUI/: CMakeLists.txt  main.cpp  main.rc
src/Model/: AxesCone.cpp  AxisAlignedBoundingBox.cpp  Background.cpp  Box.cpp  CMakeLists.txt  GridPlane.cpp  LightBall.cpp  LineSet.cpp  MaterialObject.cpp  Model.cpp  Object.cpp  PointCloud.cpp  PointCloudPoly.cpp  PoneModel.cpp  ShaderCompiler.cpp  Sphere.cpp  Terrain.cpp  TextBox.cpp  ViewerModel.cpp  WireFrame.cpp
src/Renderer/: CMakeLists.txt  DepthRenderer.cpp  FrameBuffer.cpp  Renderer.cpp  ShadowMapping.cpp  imgui.ini
src/Shader/: CMakeLists.txt  DepthShader.cpp  ModelShader.cpp  Shader.cpp  ShaderCompiler.cpp
src/Shaders/: render.frag  render.vert
src/Util/: CMakeLists.txt  Colors.cpp  FileUtil.cpp  FontStorage.cpp  Geometry.cpp  ModelParser.cpp  ObjectLoader.cpp  StbAdapter.cpp  StreamExecutor.cpp  Texture.cpp
src/Window/: CMakeLists.txt  FPSManager.cpp  ImGuiMainView.cpp  ImGuiObjectAddPanel.cpp  ImGuiSceneView.cpp  ImGuiWindow.cpp  ObjectAddPopup.cpp  Window.cpp
